--- a/clinic/index.html
+++ b/clinic/index.html
@@ -53,10 +53,10 @@
       <!-- ニュース -->
       <section class="news">
         <div>
-          <h3>News<span> お知らせ</span></h3>
+          <a href=""></a>
         </div>
         <div class="businesshours">
-          <a href=""></a>
+          <a href="">2022/12/21 <img src="" alt=""> 年末年始の営業時間について</a>
         </div>
         <div class="newslist">
           <a href="">→お知らせ一覧へ</a>
@@ -71,7 +71,8 @@
         </div>
         <div class="conceptleft">
           <div>
-            <h3><img src="" alt="">Concept<br><span>特徴</span></h3>
+            <img class="icon" src="" alt="">
+            <h3>Concept<br><span>特徴</span></h3>
           </div>
           <div>
             <h2>日々変化する<br>カラダと心を癒す<br>パーソナル<br>トレーナーとして</h2>
@@ -104,7 +105,10 @@
           <img class="bgimgright" src="" alt="">
         </div>
         <div>
-          <h3>コース・料金<br><br>当院では保険診療、自費診療ともにご対応しております</h3>
+          <img class="slush" src="" alt="">
+          <h3>コース・料金<br><br></h3>
+          <img src="slush" alt="">
+          <h3>当院では保険診療、自費診療ともにご対応しております</h3>
         </div>
         <div>
           <div class="contentleft">
@@ -133,17 +137,75 @@
       
       <!-- お客様の声 -->
       <section class="voice">
-
+        <div class="">
+          <img src="" alt="">
+          <div class="">
+            <img class="slush" src="" alt="">
+            <h3>お客様の声<br><br></h3>
+            <img class="slush-return" src="" alt="">
+            <h3>痛みの改善に加えて自分で予防もできるようになりました</h3>
+            <div>
+              <ul>
+                <li>
+                  <img src="" alt="">
+                  <h3>S・K様<br>30代女性</h3>
+                  <p>1ヶ月で腰の痛みが軽減しました。自分で自宅でできるケアも教えていただき、お任せしてよかったです。</p>
+                </li>
+                <li>
+                  <img src="" alt="">
+                  <h3>T・M様<br>40代男性</h3>
+                  <p>マラソンで右膝が痛むので、施術を受けています。なぜ痛みが生じるのかを身体の仕組みから教えていただき、普段の練習メニューも工夫できています。</p>
+                </li>
+                <li>
+                  <img src="" alt="">
+                  <h3>S・T様<br>60代女性</h3>
+                  <p>転倒して足を骨折したのをきっかけに、痛みの軽減と筋肉の衰えを防ぐための方針を立てていただいています。今は毎日元気に近所を散歩できています。</p>
+                </li>
+              </ul>            
+            </div>
+            <a href="">→お客様の声一覧へ</a>
+          </div>
+        </div>
       </section>
 
       <!-- アクセス -->
       <section class="access">
-
+        <div class="">
+          <img src="" alt="">
+          <h3>お気軽にご来院ください</h3>
+          <img src="" alt="">          
+          <div>
+            <div class="access-left">
+              <h3>JR「秋葉原駅」より徒歩1分</h3>
+              <p>〒101-0022<br>
+                東京都千代田区神田練塀町300番地<br>
+                住友不動産秋葉原駅前ビル 5F</p>
+              <h4><span>tel:</span>03-1234-5678</h4>
+              <img src="" alt="">
+              <a href=""><img src="" alt=""></a>
+            </div>
+            <div class="access-right">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.068855133681!2d139.77207767578852!3d35.69992317258122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188fee13660e23%3A0x77137876edf742ac!2z5L2P5Y-L5LiN5YuV55Sj56eL6JGJ5Y6f6aeF5YmN44OT44Or!5e0!3m2!1sja!2sjp!4v1727066854832!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- フッター -->
     <footer class="footer">
-      
+      <h1>
+        <a href=""><img src="" alt="logo"></a>
+      </h1>
+      <nav>
+        <ul>
+          <li><a href="">TOP</a></li>
+          <li><a href="">当院について</a></li>
+          <li><a href="">コース・料金</a></li>
+          <li><a href="">お知らせ</a></li>
+          <li><a href="">お客様の声</a></li>
+          <li class="button"><a href="">ご予約・お問い合わせ</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
