--- a/clinic/index.html
+++ b/clinic/index.html
@@ -12,23 +12,23 @@
       href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
   </head>
 
   <body>
     <!-- ヘッダー -->
     <header class="header">
       <h1>
-        <a href=""><img src="" alt="logo" /></a>
+        <a href=""><img src="images/logo.svg" alt="SAMURAI 整体院ロゴ"/></a>
       </h1>
       <nav>
-        <ul>
-          <li><a href="">ホーム</a></li>
-          <li><a href="">当院について</a></li>
-          <li><a href="">コース・料金</a></li>
-          <li><a href="">お知らせ</a></li>
-          <li><a href="">お客様の声</a></li>
-          <li class="button"><a href="">ご予約・お問い合わせ</a></li>
+        <ul class="header-nav">
+          <li class="header-nav-item"><a href="">ホーム</a></li>
+          <li class="header-nav-item"><a href="">当院について</a></li>
+          <li class="header-nav-item"><a href="">コース・料金</a></li>
+          <li class="header-nav-item"><a href="">お知らせ</a></li>
+          <li class="header-nav-item"><a href="">お客様の声</a></li>
+          <li class="header-button"><a href="">ご予約・お問い合わせ</a></li>
         </ul>
       </nav>
     </header>
@@ -39,141 +39,112 @@
         <div class="left-box">
           <p>根本的な症状改善を<br />サポートします</p>
         </div>
-        <div class="right-box">
           <!-- swiperで表示する -->
-          <ul>
-            <li><img src="" alt="" /></li>
-            <li><img src="" alt="" /></li>
-            <li><img src="" alt="" /></li>
-            <li><img src="" alt="" /></li>
-          </ul>
-        </div>
+        <ul class="right-box">
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+          <li><img src="" alt="" /></li>
+        </ul>        
       </section>
 
       <!-- ニュース -->
       <section class="news">
-        <div>
-          <a href=""></a>
-        </div>
-        <div class="businesshours">
-          <a href="">2022/12/21 <img src="" alt=""> 年末年始の営業時間について</a>
-        </div>
-        <div class="newslist">
-          <a href="">→お知らせ一覧へ</a>
-        </div>
+        <h3>News お知らせ</h3>       
+        <a class="business-hours" href="">2022/12/21 <span class="category">営業日時</span> 年末年始の営業時間について</a>        
+        <a class="button-with-arrow no-outline" href="">→お知らせ一覧へ</a>
       </section>
 
       <!-- コンセプト -->
-      <section class="concept">
-        <div> 
-          <img class="bgimgleft" src="" alt="">
-          <img class="bgimgright" src="" alt="">
+      <section class="concept">        
+        <div class="concept-left">
+          <div>
+            <div><img class="icon" src="" alt="">Concept</div>
+            <h3>特徴</h3>          
+          </div>
+          <h2>日々変化する<br>カラダと心を癒す<br>パーソナル<br>トレーナーとして</h2>
+          <p>
+            当院では、問診にてお客様の症状や生活スタイル、ご希望を丁寧にお伺いした上で施術方針を立てていきます。<br><br>
+            また、根本的に症状を改善するために、お客様ご自身で行えるケアやストレッチもお伝えします。<br><br>
+            ご不安な点や疑問点などお気軽にご相談くださいませ。
+          </p>
+          <a class="button-with-arrow" href="">→当院について</a>
         </div>
-        <div class="conceptleft">
-          <div>
-            <img class="icon" src="" alt="">
-            <h3>Concept<br><span>特徴</span></h3>
-          </div>
-          <div>
-            <h2>日々変化する<br>カラダと心を癒す<br>パーソナル<br>トレーナーとして</h2>
-          </div>
-          <div>
-            <p>
-              当院では、問診にてお客様の症状や生活スタイル、ご希望を丁寧にお伺いした上で施術方針を立てていきます。<br><br>
-              また、根本的に症状を改善するために、お客様ご自身で行えるケアやストレッチもお伝えします。<br><br>
-              ご不安な点や疑問点などお気軽にご相談くださいませ。
-            </p>
-          </div>
-          <div>
-            <a href="">→当院について</a>
-          </div>
-        </div>
-        <div class="conseptright">
-          <ul>
-            <li><img class="treatment1" src="" alt=""></li>
-            <li><img class="treatment2" src="" alt=""></li>
-            <li><img class="treatment3" src="" alt=""></li>
-          </ul>
+
+        <div class="concept-right">
+          <img class="treatment1" src="" alt="">
+          <img class="treatment2" src="" alt="">
+          <img class="treatment3" src="" alt="">
         </div>
       </section>
 
       <!-- コース・料金 -->
-      <section class="courseprice">
+      <section class="course-price">
         <div>
-          <img class="bgimgmiddle" src="" alt="">
-          <img class="bgimgleft" src="" alt="">
-          <img class="bgimgright" src="" alt="">
+          <img class="bg-img-middle" src="" alt="">
         </div>
         <div>
-          <img class="slush" src="" alt="">
-          <h3>コース・料金<br><br></h3>
-          <img src="slush" alt="">
+          <h2 class="slush-title">コース・料金</h2>
           <h3>当院では保険診療、自費診療ともにご対応しております</h3>
         </div>
         <div>
-          <div class="contentleft">
+          <div class="content-left">
             <img src="" alt="">
-            <h3>保険診療</h3>
+            <h4>保険診療</h4>
             <ul>
               <li>骨折・打撲・捻挫・脱臼</li>
               <li>スポーツ診療</li>
               <li>交通事故</li>
             </ul>
           </div>
-          <div class="contentright">
+          <div class="content-right">
             <img src="" alt="">
-            <h3>自費診療</h3>
+            <h4>自費診療</h4>
             <ul>
               <li>腰痛・肩こり</li>
               <li>冷え性・だるさ</li>
               <li>骨盤・背骨矯正</li>
             </ul>
           </div>
-          <div class="contentbottom">
-            <a href="">→コース・料金詳細へ</a>
-          </div>
+          <a class="button-with-arrow" href="">→コース・料金詳細へ</a>
         </div>
       </section>
       
       <!-- お客様の声 -->
       <section class="voice">
+        <img src="" alt="">
         <div class="">
-          <img src="" alt="">
-          <div class="">
-            <img class="slush" src="" alt="">
-            <h3>お客様の声<br><br></h3>
-            <img class="slush-return" src="" alt="">
+          <div>
+            <h2 class="slush-title">お客様の声</h2>
             <h3>痛みの改善に加えて自分で予防もできるようになりました</h3>
-            <div>
-              <ul>
-                <li>
-                  <img src="" alt="">
-                  <h3>S・K様<br>30代女性</h3>
-                  <p>1ヶ月で腰の痛みが軽減しました。自分で自宅でできるケアも教えていただき、お任せしてよかったです。</p>
-                </li>
-                <li>
-                  <img src="" alt="">
-                  <h3>T・M様<br>40代男性</h3>
-                  <p>マラソンで右膝が痛むので、施術を受けています。なぜ痛みが生じるのかを身体の仕組みから教えていただき、普段の練習メニューも工夫できています。</p>
-                </li>
-                <li>
-                  <img src="" alt="">
-                  <h3>S・T様<br>60代女性</h3>
-                  <p>転倒して足を骨折したのをきっかけに、痛みの軽減と筋肉の衰えを防ぐための方針を立てていただいています。今は毎日元気に近所を散歩できています。</p>
-                </li>
-              </ul>            
-            </div>
-            <a href="">→お客様の声一覧へ</a>
           </div>
+          <div>
+            <ul>
+              <li>
+                <img src="" alt="">
+                <h4>S・K様<br>30代女性</h4>
+                <p>1ヶ月で腰の痛みが軽減しました。自分で自宅でできるケアも教えていただき、お任せしてよかったです。</p>
+              </li>
+              <li>
+                <img src="" alt="">
+                <h4>T・M様<br>40代男性</h4>
+                <p>マラソンで右膝が痛むので、施術を受けています。なぜ痛みが生じるのかを身体の仕組みから教えていただき、普段の練習メニューも工夫できています。</p>
+              </li>
+              <li>
+                <img src="" alt="">
+                <h4>S・T様<br>60代女性</h4>
+                <p>転倒して足を骨折したのをきっかけに、痛みの軽減と筋肉の衰えを防ぐための方針を立てていただいています。今は毎日元気に近所を散歩できています。</p>
+              </li>
+            </ul>            
+          </div>
+          <a class="button-with-arrow" href="">→お客様の声一覧へ</a>
         </div>
       </section>
 
       <!-- アクセス -->
       <section class="access">
         <div class="">
-          <img src="" alt="">
-          <h3>お気軽にご来院ください</h3>
-          <img src="" alt="">          
+          <h2 class="slush-title">お気軽にご来院ください</h2>
           <div>
             <div class="access-left">
               <h3>JR「秋葉原駅」より徒歩1分</h3>
@@ -181,8 +152,41 @@
                 東京都千代田区神田練塀町300番地<br>
                 住友不動産秋葉原駅前ビル 5F</p>
               <h4><span>tel:</span>03-1234-5678</h4>
-              <img src="" alt="">
-              <a href=""><img src="" alt=""></a>
+              <table>
+                <tbody>
+                  <tr>
+                    <th></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <th></th>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                  </tr>
+                </tbody>
+              </table>
+              <a href="">ご予約・お問い合わせはこちらから</a>
             </div>
             <div class="access-right">
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.068855133681!2d139.77207767578852!3d35.69992317258122!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188fee13660e23%3A0x77137876edf742ac!2z5L2P5Y-L5LiN5YuV55Sj56eL6JGJ5Y6f6aeF5YmN44OT44Or!5e0!3m2!1sja!2sjp!4v1727066854832!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -192,10 +196,8 @@
       </section>
     </main>
     <!-- フッター -->
-    <footer class="footer">
-      <h1>
-        <a href=""><img src="" alt="logo"></a>
-      </h1>
+    <footer class="footer">      
+      <a href=""><img src="" alt="SAMURAI 整体院ロゴ"></a>
       <nav>
         <ul>
           <li><a href="">TOP</a></li>
@@ -203,9 +205,11 @@
           <li><a href="">コース・料金</a></li>
           <li><a href="">お知らせ</a></li>
           <li><a href="">お客様の声</a></li>
-          <li class="button"><a href="">ご予約・お問い合わせ</a></li>
+          <li><a href="">ご予約・お問い合わせ</a></li>
         </ul>
       </nav>
+      <p class="copyright">©︎2023 SAMURAI整体院</p>
     </footer>
+    <div class="page-top"><img src="" alt="ページトップへ戻る"></div>
   </body>
 </html>
