--- a/clinic/index.html
+++ b/clinic/index.html
@@ -37,7 +37,7 @@
       <!-- メインビジュアル -->
       <section class="mainvisual">
         <div class="left-box">
-          <p>根本的な症状改善を<br />サポートします</p>
+          <p>根本的な症状改善を<br>サポートします</p>
         </div>
           <!-- swiperで表示する -->
         <ul class="right-box">
