--- a/clinic/index.html
+++ b/clinic/index.html
@@ -41,7 +41,7 @@
         </div>
           <!-- swiperで表示する -->
         <ul class="right-box">
-          <li><img src="" alt="" /></li>
+          <li><img src="images/01_TOP01.png" alt="" /></li>
           <li><img src="" alt="" /></li>
           <li><img src="" alt="" /></li>
           <li><img src="" alt="" /></li>
@@ -72,9 +72,9 @@
         </div>
 
         <div class="concept-right">
-          <img class="treatment1" src="" alt="">
-          <img class="treatment2" src="" alt="">
-          <img class="treatment3" src="" alt="">
+          <img class="treatment1" src="images/Frame 2275.png" alt="">
+          <img class="treatment2" src="images/Frame 2553.png" alt="">
+          <img class="treatment3" src="images/Frame 2554.png" alt="">
         </div>
       </section>
 
