--- a/clinic/index.html
+++ b/clinic/index.html
@@ -59,7 +59,7 @@
       <section class="concept">        
         <div class="concept-left">
           <div>
-            <div><img class="icon" src="" alt="">Concept</div>
+            <div><img class="icon" src="images/BGicon.png" alt="">Concept</div>
             <h3>特徴</h3>          
           </div>
           <h2>日々変化する<br>カラダと心を癒す<br>パーソナル<br>トレーナーとして</h2>
