--- a/clinic/index.html
+++ b/clinic/index.html
@@ -72,9 +72,9 @@
         </div>
 
         <div class="concept-right">
-          <img class="treatment1" src="images/Frame 2275.png" alt="">
-          <img class="treatment2" src="images/Frame 2553.png" alt="">
-          <img class="treatment3" src="images/Frame 2554.png" alt="">
+          <img class="treatment1" src="images/batch_toralf-thomassen-5S40ixhBK-I-unsplash 1.png" alt="">
+          <img class="treatment2" src="images/batch_diana-light-J_tScv7f7vI-unsplash 1.png" alt="">
+          <img class="treatment3" src="images/TOP_Tokucho 4.png" alt="">
         </div>
       </section>
 
@@ -83,13 +83,13 @@
         <div>
           <img class="bg-img-middle" src="" alt="">
         </div>
-        <div>
+        <div class="course-title">
           <h2 class="slush-title">コース・料金</h2>
           <h3>当院では保険診療、自費診療ともにご対応しております</h3>
         </div>
-        <div>
+        <div class="course-content">
           <div class="content-left">
-            <img src="" alt="">
+            <img src="images/TOP_hoken 4.png" alt="">
             <h4>保険診療</h4>
             <ul>
               <li>骨折・打撲・捻挫・脱臼</li>
@@ -98,7 +98,7 @@
             </ul>
           </div>
           <div class="content-right">
-            <img src="" alt="">
+            <img src="images/TOP_jihi 4.png" alt="">
             <h4>自費診療</h4>
             <ul>
               <li>腰痛・肩こり</li>
@@ -106,8 +106,9 @@
               <li>骨盤・背骨矯正</li>
             </ul>
           </div>
-          <a class="button-with-arrow" href="">→コース・料金詳細へ</a>
         </div>
+        <a class="button-with-arrow" href="">→コース・料金詳細へ</a>
+
       </section>
       
       <!-- お客様の声 -->
