--- a/clinic/index.html
+++ b/clinic/index.html
@@ -41,7 +41,7 @@
         </div>
           <!-- swiperで表示する -->
         <ul class="right-box">
-          <li><img src="images/01_TOP01.png" alt="" /></li>
+          <li><img src="images/main-visual1.png" alt="" /></li>
           <li><img src="" alt="" /></li>
           <li><img src="" alt="" /></li>
           <li><img src="" alt="" /></li>
@@ -72,9 +72,9 @@
         </div>
 
         <div class="concept-right">
-          <img class="treatment1" src="images/batch_toralf-thomassen-5S40ixhBK-I-unsplash 1.png" alt="">
-          <img class="treatment2" src="images/batch_diana-light-J_tScv7f7vI-unsplash 1.png" alt="">
-          <img class="treatment3" src="images/TOP_Tokucho 4.png" alt="">
+          <img class="treatment1" src="images/treatment1.png" alt="">
+          <img class="treatment2" src="images/treatment2.png" alt="">
+          <img class="treatment3" src="images/treatment3.png" alt="">
         </div>
       </section>
 
@@ -89,7 +89,7 @@
         </div>
         <div class="course-content">
           <div class="content-left">
-            <img src="images/TOP_hoken 4.png" alt="">
+            <img src="images/course-left.png" alt="">
             <h4>保険診療</h4>
             <ul>
               <li>骨折・打撲・捻挫・脱臼</li>
@@ -98,7 +98,7 @@
             </ul>
           </div>
           <div class="content-right">
-            <img src="images/TOP_jihi 4.png" alt="">
+            <img src="images/course-right.png" alt="">
             <h4>自費診療</h4>
             <ul>
               <li>腰痛・肩こり</li>
