--- a/clinic/index.html
+++ b/clinic/index.html
@@ -81,7 +81,7 @@
       <!-- コース・料金 -->
       <section class="course-price">
         <div>
-          <img class="bg-img-middle" src="" alt="">
+          <img class="bg-img-middle" src="images/bg-img-middle.png" alt="">
         </div>
         <div class="course-title">
           <h2 class="slush-title">コース・料金</h2>
